--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booststrap Learning</title>
     <link rel="shortcut icon" href="Media/Screenshot 2021-07-31 142628.png" type="image/x-icon">
-    <link rel="stylesheet" href="D:\Web Development\bootstrap-5/css/bootstrap.min.css">
-    <style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
       h1{
         margin-top: 100px;
       }
